[GTK] return-type-c-linkage warnings https://bugs.webkit.org/show_bug.cgi?id=221047

Patch by Philippe Normand <pnormand@igalia.com> on 2021-01-29
Reviewed by Carlos Garcia Campos.

Remove extern "C" braces, un-needed for private C++ objects.

Source/WebCore:

* platform/network/soup/WebKitFormDataInputStream.h:

Source/WebKit:

* NetworkProcess/soup/WebKitDirectoryInputStream.h:

Canonical link: https://commits.webkit.org/233476@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@272057 268f45cc-cd09-0410-ab3c-d52691b4dbfc